--- a/todo
+++ b/todo
@@ -22,6 +22,8 @@ mod ladder join requestlist (modjoinrequests.php?ladder=X)
 
 Teksten aanpassen
 
+TODO: mu/sigma/rating floats maken (of fixed point)
+
 TODO's in code fixen
 
 Opschonen UI
