--- a/todo
+++ b/todo
@@ -6,15 +6,13 @@ my ladder settings (myladdersettings.php)
 	actief ja/nee (pauze)
 	email settings
 
-Teksten aanpassen
-
-Opschonen UI
-
-Meer vulling
+Homepage tekst aanpassen
 
 Ladder joinen => settings doorgeven!
 Ladder joinen => player level checken!
+Ladder joinen => mod approve!
 
+Weergave ladderlijst als je niet approved bent.
 
 Email notificaties:
 	mod: nieuwe mensen
