Voorzetje homepage tekst.

--- a/todo
+++ b/todo
@@ -1,6 +1,7 @@
-Bij eerste bezoek, na klikken op "join today" en na warlight clot pagina, eerst email adres invullen en account maken.
-
 Homepage tekst aanpassen
+About pagina maken
+
+Bij eerste bezoek, na klikken op "join today" en na warlight clot pagina, eerst email adres invullen en account maken.
 
 Ladder joinen => settings doorgeven!
 Ladder joinen => player level checken!
@@ -10,8 +11,8 @@ Email notificaties:
 	mod: nieuwe mensen
 	ladder status (maandelijks)
 	confirm email
-
-About pagina maken
+	resend confirm
+	confirm status laten zien
 
 Live testen
 
