--- a/todo
+++ b/todo
@@ -8,6 +8,8 @@ Email notificaties:
 	resend confirm
 	confirm status laten zien
 
+Template beschikbaarheid overal inzetten
+
 Live testen
 
 TODO's in code fixen
